update login functionality and styles

--- a/app/components/App/App.css
+++ b/app/components/App/App.css
@@ -1,3 +1,8 @@
-.app{
-  background-color: maroon;
+.app {
+  background-color: #565353;
+  /*background: linear-gradient(to bottom, #646464 0%,#0e0e0e 100%);*/
+}
+
+.watcher {
+  color: #DCAA19;
 }
