--- a/app/components/LogOff/LogOff.css
+++ b/app/components/LogOff/LogOff.css
@@ -1,4 +1,19 @@
 .logoff-warning {
-  margin: 20%;
+  margin: 10%;
   color: white;
+}
+
+.logoff-btn {
+  background-color: #DCAA19;
+  border: none;
+  margin: 5px;
+  height: 30px;
+  width: 40px;
+}
+
+.logoff-btn:hover {
+  color: #ede3e3;
+  box-shadow: 0 0 1px 1px white;
+  -moz-box-shadow: 0 0 1px 1px white;
+  -webkit-box-shadow: 0 0 1px 1px white;
 }
