tweaked favorite button style

--- a/app/components/MovieCard/MovieCard.css
+++ b/app/components/MovieCard/MovieCard.css
@@ -3,7 +3,16 @@
   flex-direction: column;
   padding: 10px;
   margin: 5px;
+}
+
+.not-favorite {
   background-color: rgba(0, 0, 0, 0.3);
+
+}
+
+.favorite {
+  background-color: #dcaa19;
+
 }
 
 
@@ -13,11 +22,24 @@
   width: 300px;
 }
 
-.button-favorite , .button-not-favorite {
+.button-favorite {
+  /*background-color: white;*/
+  background-color: #3c3a3a;
+  color: white;
   border: none;
   margin-top: 10px;
-  background-color: #fff;
+}
 
+.button-not-favorite {
+  border: none;
+  margin-top: 10px;
+  background-color: #dcaa19;
+  /*background: linear-gradient(to bottom, #646464 0%, #0e0e0e 100%);*/
+}
+
+.button-favorite,
+.button-not-favorite {
+  height: 30px;
 }
 
 /*.button-not-favorite {
@@ -28,7 +50,7 @@
 }*/
 
 .button-favorite:hover, .button-not-favorite:hover {
-  color: red;
+  color: black;
   box-shadow: 0 0 1px 1px white;
   -moz-box-shadow: 0 0 1px 1px white;
   -webkit-box-shadow: 0 0 1px 1px white;
