--- a/app/components/Favorites/Favorites.css
+++ b/app/components/Favorites/Favorites.css
@@ -3,19 +3,21 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  margin-top: 5px;
 }
 
-  .favorite{
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    margin: 5px;
-  }
-
-
+.favorite{
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  margin: 5px;
+}
 
 .no-favorites-container {
   font-weight: 100;
   font-family: sans-serif;
-  color: #fff;
+  font-size:20px;
+  color: #dcaa19;
+  margin-top: 40px;
+  margin-bottom: 10px;
 }
