--- a/app/components/LogOff/LogOff.css
+++ b/app/components/LogOff/LogOff.css
@@ -1,14 +1,18 @@
 .logoff-warning {
   margin: 10%;
   color: white;
+  font-family: sans-serif;
+  font-weight: 100;
 }
 
 .logoff-btn {
   background-color: #DCAA19;
   border: none;
   margin: 5px;
-  height: 30px;
-  width: 40px;
+  height: 44px;
+  width: 100px;
+  font-size: 16px;
+  font-weight: 100;
 }
 
 .logoff-btn:hover {
