--- a/app/components/Login/Login.css
+++ b/app/components/Login/Login.css
@@ -1,20 +1,43 @@
-.login-page {
-  margin: 20px;
+.login-page{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+.email , .password{
+  height: 42px;
+  width: 85%;
+  max-width: 350px;
+  border: 1px black solid;
+  padding-left: 5px;
+  font-size: 17px;
+  margin: 3px;
 }
 
-.password {
-  margin-left: 10px;
-  margin-right: 10px;
+.login-page{
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding:20px 10px;
 }
+
 
 .login-btn {
+  margin-top: 3px;
+  height: 42px;
   background-color: #DCAA19;
   border: none;
+  width:  40%;
+  max-width: 125px;
+  box-shadow: 1px 1px 1px #000;
+
 }
 
 .login-btn:hover {
-  /*box-shadow: 1px 1px 1px white;*/
   box-shadow: 0 0 1px 1px white;
   -moz-box-shadow: 0 0 1px 1px white;
   -webkit-box-shadow: 0 0 1px 1px white;
+  border-radius: 5px;
+  transition: all .2s;
+  color:#fff;
 }
