--- a/app/components/Signup/Signup.css
+++ b/app/components/Signup/Signup.css
@@ -1,14 +1,18 @@
-input {
-  margin: 5px;
-}
-
-.signup-page {
+.signup-page{
   margin-top: 15px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
 }
 
-.signup-submit {
+
+.signup-submit{
+  width: 110px;
+  height: 40px;
   background-color: #DCAA19;
   border: none;
+  font-size: 15px;
 }
 
 .signup-submit:hover {
@@ -16,4 +20,18 @@ input {
   box-shadow: 0 0 1px 1px white;
   -moz-box-shadow: 0 0 1px 1px white;
   -webkit-box-shadow: 0 0 1px 1px white;
+  border-radius: 5px;
+  transition: all .2s;
+}
+
+.user-input{
+  height: 46px;
+  width: 135px;
+  font-size:17px;
+  width: 80%;
+  padding-left: 5px;
+  margin: 5px 0px;
+  max-width: 310px;
+  font-size: 17px;
+  border: none;
 }
