--- a/app/components/MovieDetails/MovieDetails.css
+++ b/app/components/MovieDetails/MovieDetails.css
@@ -3,6 +3,8 @@
   font-family: sans-serif;
   font-weight: 100;
   max-width: 750px;
+  margin: 5px auto;
+
 }
 
 .movie-details-img{
@@ -25,4 +27,8 @@
   margin: 0px auto;
   align-items: flex-start;
   flex-direction: column;
+}
+
+#movie-details-overview{
+  font-size: 18px;
 }
