--- a/app/main.css
+++ b/app/main.css
@@ -1,5 +1,14 @@
+@import url('./components/App/App.css');
+@import url('./components/Favorites/Favorites.css');
+@import url('./components/Login/Login.css');
+@import url('./components/LogOff/LogOff.css');
+@import url('./components/MovieCard/MovieCard.css');
+@import url('./components/MovieDetails/MovieDetails.css');
+@import url('./components/MovieList/MovieList.css');
+@import url('./components/NavBar/NavBar.css');
+@import url('./components/Signup/Signup.css');
+
 #main h1 {
-  /*background-color: #DCAA19;*/
   background: linear-gradient(to bottom, #646464 0%, #0e0e0e 100%);
   font-family: sans-serif;
   font-weight: 100;
