--- a/app/components/MovieCard/MovieCard.css
+++ b/app/components/MovieCard/MovieCard.css
@@ -1,10 +1,11 @@
 
 .not-favorite, .favorite{
+  border-radius: 15px;
+  box-shadow: 1px 1px 1px #dcaa19;
   display: flex;
   flex-direction: column;
-  padding: 10px;
   margin: 5px;
-  border-radius: 15px;
+  padding: 10px;
 }
 
 .not-favorite {
@@ -12,14 +13,13 @@
 }
 
 .favorite {
-  background-color: #dcaa19;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .movie-image {
-  height:300px;
-  width: 300px;
   opacity:.85;
   border-radius: 5px;
+  width: 300px;
 }
 
 .not-favorite img:hover , .favorite img:hover{
@@ -29,8 +29,8 @@
 }
 
 .button-favorite {
-  background-color: #3c3a3a;
-  color: white;
+  background: linear-gradient(to bottom, #f9bf20 0%, #dcaa19 40%, #bc9016 65%, #916e0d 100%  );
+  color: black;
   border: none;
   margin-top: 10px;
   border-radius: 5px;
@@ -39,11 +39,11 @@
 }
 
 .button-not-favorite {
+  background: linear-gradient(to bottom, #646464 0%, #0e0e0e 100%);
   border: none;
+  color: #dcaa19;
   margin-top: 10px;
-  background-color: #dcaa19;
   border-radius: 5px;
-
 }
 
 .button-favorite,
@@ -53,7 +53,7 @@
   font-weight:100;
 }
 
-.button-favorite:hover, .button-not-favorite:hover {
+.button-favorite:hover {
   box-shadow: 0 0 1px 1px white;
   -moz-box-shadow: 0 0 1px 1px white;
   -webkit-box-shadow: 0 0 1px 1px white;
@@ -61,13 +61,15 @@
 }
 
 .button-not-favorite:hover{
-  color:#fff;
+  border-radius: 5px;
+  box-shadow: 0 0 1px 1px #dcaa19;
+  -moz-box-shadow: 0 0 1px 1px #dcaa19;
+  -webkit-box-shadow: 0 0 1px 1px #dcaa19;
   transition: all .6s;
 
 }
 
 .button-favorite:hover{
- color: #dcaa19;
  transition: all .6s;
 }
 
@@ -79,9 +81,3 @@
 .hidden {
   display: none;
 }
-
-/*.star-img{
-  background-size: cover;
-  width: 10px;
-  height:10px;
-  }*/
