--- a/app/components/LogOff/LogOff.css
+++ b/app/components/LogOff/LogOff.css
@@ -20,4 +20,6 @@
   box-shadow: 0 0 1px 1px white;
   -moz-box-shadow: 0 0 1px 1px white;
   -webkit-box-shadow: 0 0 1px 1px white;
+   border-radius: 3px;
+   transition: all .3s;
 }
