--- a/app/components/MovieCard/MovieCard.css
+++ b/app/components/MovieCard/MovieCard.css
@@ -62,6 +62,7 @@
   -webkit-box-shadow: 0 0 1px 1px white;
   border-radius: 5px;
   height:35px;
+
 }
 
 .button-not-favorite:hover{
@@ -69,6 +70,7 @@
   box-shadow: 0 0 1px 1px #dcaa19;
   -moz-box-shadow: 0 0 1px 1px #dcaa19;
   -webkit-box-shadow: 0 0 1px 1px #dcaa19;
+  height:35px;
   transition: all .6s;
 
 }
